--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 /node_modules
 /.pnp
 .pnp.*
+.pnp.js
 .yarn/*
 !.yarn/patches
 !.yarn/plugins
@@ -28,6 +29,7 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+ts-debug.log*
 .pnpm-debug.log*
 
 # env files (can opt-in for committing if needed)
